src/main/java/simplelang/generated/SimpleLangParser.java
// $ANTLR 3.4 /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g 2013-03-23 23:28:03

  package simplelang.generated;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SimpleLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA", "AND", "ASSIGN", "COMMA", "DIGIT", "DIVIDED_BY", "EQ", "FALSE", "GT", "GTE", "HEXDIGIT", "ID", "LPAREN", "LT", "LTE", "MINUS", "NEQ", "NOT", "NUMBER", "OR", "PLUS", "POINT", "RPAREN", "TIMES", "TRUE", "T_ARG", "T_ASSIGN", "T_CALL", "T_EXPR", "T_NOT", "T_VAR", "WHITESPACE"
    };

    public static final int EOF=-1;
    public static final int ALPHA=4;
    public static final int AND=5;
    public static final int ASSIGN=6;
    public static final int COMMA=7;
    public static final int DIGIT=8;
    public static final int DIVIDED_BY=9;
    public static final int EQ=10;
    public static final int FALSE=11;
    public static final int GT=12;
    public static final int GTE=13;
    public static final int HEXDIGIT=14;
    public static final int ID=15;
    public static final int LPAREN=16;
    public static final int LT=17;
    public static final int LTE=18;
    public static final int MINUS=19;
    public static final int NEQ=20;
    public static final int NOT=21;
    public static final int NUMBER=22;
    public static final int OR=23;
    public static final int PLUS=24;
    public static final int POINT=25;
    public static final int RPAREN=26;
    public static final int TIMES=27;
    public static final int TRUE=28;
    public static final int T_ARG=29;
    public static final int T_ASSIGN=30;
    public static final int T_CALL=31;
    public static final int T_EXPR=32;
    public static final int T_NOT=33;
    public static final int T_VAR=34;
    public static final int WHITESPACE=35;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SimpleLangParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SimpleLangParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SimpleLangParser.tokenNames; }
    public String getGrammarFileName() { return "/home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g"; }


      @Override
      protected Object recoverFromMismatchedToken(IntStream input,
                                                  int ttype,
                                                  BitSet follow)
              throws RecognitionException {
          // Don't recover; throw an exception instead.
          throw new MismatchedTokenException(ttype, input);
      }


    public static class parse_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parse"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:76:8: public parse : ( expression ^ EOF !| assignment ^ EOF !);
    public final SimpleLangParser.parse_return parse() throws RecognitionException {
        SimpleLangParser.parse_return retval = new SimpleLangParser.parse_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        Token EOF4=null;
        SimpleLangParser.expression_return expression1 =null;

        SimpleLangParser.assignment_return assignment3 =null;


        Object EOF2_tree=null;
        Object EOF4_tree=null;

        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:77:3: ( expression ^ EOF !| assignment ^ EOF !)
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==FALSE||LA1_0==LPAREN||LA1_0==MINUS||(LA1_0 >= NOT && LA1_0 <= NUMBER)||LA1_0==PLUS||LA1_0==TRUE) ) {
                alt1=1;
            }
            else if ( (LA1_0==ID) ) {
                int LA1_2 = input.LA(2);

                if ( (LA1_2==EOF||LA1_2==AND||(LA1_2 >= DIVIDED_BY && LA1_2 <= EQ)||(LA1_2 >= GT && LA1_2 <= GTE)||(LA1_2 >= LPAREN && LA1_2 <= NEQ)||(LA1_2 >= OR && LA1_2 <= PLUS)||LA1_2==TIMES) ) {
                    alt1=1;
                }
                else if ( (LA1_2==ASSIGN) ) {
                    alt1=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:77:5: expression ^ EOF !
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_expression_in_parse302);
                    expression1=expression();

                    state._fsp--;

                    root_0 = (Object)adaptor.becomeRoot(expression1.getTree(), root_0);

                    EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse305); 

                    }
                    break;
                case 2 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:78:5: assignment ^ EOF !
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_assignment_in_parse312);
                    assignment3=assignment();

                    state._fsp--;

                    root_0 = (Object)adaptor.becomeRoot(assignment3.getTree(), root_0);

                    EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_parse315); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parse"


    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:81:1: expression : expressionImpl -> ^( T_EXPR expressionImpl ) ;
    public final SimpleLangParser.expression_return expression() throws RecognitionException {
        SimpleLangParser.expression_return retval = new SimpleLangParser.expression_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleLangParser.expressionImpl_return expressionImpl5 =null;


        RewriteRuleSubtreeStream stream_expressionImpl=new RewriteRuleSubtreeStream(adaptor,"rule expressionImpl");
        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:82:3: ( expressionImpl -> ^( T_EXPR expressionImpl ) )
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:82:5: expressionImpl
            {
            pushFollow(FOLLOW_expressionImpl_in_expression331);
            expressionImpl5=expressionImpl();

            state._fsp--;

            stream_expressionImpl.add(expressionImpl5.getTree());

            // AST REWRITE
            // elements: expressionImpl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 82:21: -> ^( T_EXPR expressionImpl )
            {
                // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:82:25: ^( T_EXPR expressionImpl )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(T_EXPR, "T_EXPR")
                , root_1);

                adaptor.addChild(root_1, stream_expressionImpl.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"


    public static class expressionImpl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expressionImpl"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:85:1: expressionImpl : operand ( ( arithmeticOp | relationalOp | logicalOp ) operand )* ;
    public final SimpleLangParser.expressionImpl_return expressionImpl() throws RecognitionException {
        SimpleLangParser.expressionImpl_return retval = new SimpleLangParser.expressionImpl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleLangParser.operand_return operand6 =null;

        SimpleLangParser.arithmeticOp_return arithmeticOp7 =null;

        SimpleLangParser.relationalOp_return relationalOp8 =null;

        SimpleLangParser.logicalOp_return logicalOp9 =null;

        SimpleLangParser.operand_return operand10 =null;



        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:3: ( operand ( ( arithmeticOp | relationalOp | logicalOp ) operand )* )
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:5: operand ( ( arithmeticOp | relationalOp | logicalOp ) operand )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_operand_in_expressionImpl356);
            operand6=operand();

            state._fsp--;

            adaptor.addChild(root_0, operand6.getTree());

            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:13: ( ( arithmeticOp | relationalOp | logicalOp ) operand )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND||(LA3_0 >= DIVIDED_BY && LA3_0 <= EQ)||(LA3_0 >= GT && LA3_0 <= GTE)||(LA3_0 >= LT && LA3_0 <= NEQ)||(LA3_0 >= OR && LA3_0 <= PLUS)||LA3_0==TIMES) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:14: ( arithmeticOp | relationalOp | logicalOp ) operand
            	    {
            	    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:14: ( arithmeticOp | relationalOp | logicalOp )
            	    int alt2=3;
            	    switch ( input.LA(1) ) {
            	    case DIVIDED_BY:
            	    case MINUS:
            	    case PLUS:
            	    case TIMES:
            	        {
            	        alt2=1;
            	        }
            	        break;
            	    case EQ:
            	    case GT:
            	    case GTE:
            	    case LT:
            	    case LTE:
            	    case NEQ:
            	        {
            	        alt2=2;
            	        }
            	        break;
            	    case AND:
            	    case OR:
            	        {
            	        alt2=3;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        throw nvae;

            	    }

            	    switch (alt2) {
            	        case 1 :
            	            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:15: arithmeticOp
            	            {
            	            pushFollow(FOLLOW_arithmeticOp_in_expressionImpl360);
            	            arithmeticOp7=arithmeticOp();

            	            state._fsp--;

            	            adaptor.addChild(root_0, arithmeticOp7.getTree());

            	            }
            	            break;
            	        case 2 :
            	            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:30: relationalOp
            	            {
            	            pushFollow(FOLLOW_relationalOp_in_expressionImpl364);
            	            relationalOp8=relationalOp();

            	            state._fsp--;

            	            adaptor.addChild(root_0, relationalOp8.getTree());

            	            }
            	            break;
            	        case 3 :
            	            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:86:45: logicalOp
            	            {
            	            pushFollow(FOLLOW_logicalOp_in_expressionImpl368);
            	            logicalOp9=logicalOp();

            	            state._fsp--;

            	            adaptor.addChild(root_0, logicalOp9.getTree());

            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_operand_in_expressionImpl371);
            	    operand10=operand();

            	    state._fsp--;

            	    adaptor.addChild(root_0, operand10.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expressionImpl"


    public static class arithmeticOp_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "arithmeticOp"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:89:1: arithmeticOp : ( PLUS | MINUS | TIMES | DIVIDED_BY );
    public final SimpleLangParser.arithmeticOp_return arithmeticOp() throws RecognitionException {
        SimpleLangParser.arithmeticOp_return retval = new SimpleLangParser.arithmeticOp_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set11=null;

        Object set11_tree=null;

        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:90:3: ( PLUS | MINUS | TIMES | DIVIDED_BY )
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:
            {
            root_0 = (Object)adaptor.nil();


            set11=(Token)input.LT(1);

            if ( input.LA(1)==DIVIDED_BY||input.LA(1)==MINUS||input.LA(1)==PLUS||input.LA(1)==TIMES ) {
                input.consume();
                adaptor.addChild(root_0, 
                (Object)adaptor.create(set11)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "arithmeticOp"


    public static class relationalOp_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "relationalOp"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:93:1: relationalOp : ( EQ | NEQ | LT | LTE | GT | GTE );
    public final SimpleLangParser.relationalOp_return relationalOp() throws RecognitionException {
        SimpleLangParser.relationalOp_return retval = new SimpleLangParser.relationalOp_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set12=null;

        Object set12_tree=null;

        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:94:3: ( EQ | NEQ | LT | LTE | GT | GTE )
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:
            {
            root_0 = (Object)adaptor.nil();


            set12=(Token)input.LT(1);

            if ( input.LA(1)==EQ||(input.LA(1) >= GT && input.LA(1) <= GTE)||(input.LA(1) >= LT && input.LA(1) <= LTE)||input.LA(1)==NEQ ) {
                input.consume();
                adaptor.addChild(root_0, 
                (Object)adaptor.create(set12)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "relationalOp"


    public static class logicalOp_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "logicalOp"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:97:1: logicalOp : ( AND | OR );
    public final SimpleLangParser.logicalOp_return logicalOp() throws RecognitionException {
        SimpleLangParser.logicalOp_return retval = new SimpleLangParser.logicalOp_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set13=null;

        Object set13_tree=null;

        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:98:3: ( AND | OR )
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:
            {
            root_0 = (Object)adaptor.nil();


            set13=(Token)input.LT(1);

            if ( input.LA(1)==AND||input.LA(1)==OR ) {
                input.consume();
                adaptor.addChild(root_0, 
                (Object)adaptor.create(set13)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (Exception e) {
            throw e;
          }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "logicalOp"


    public static class operand_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "operand"
    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:101:1: operand : ( ( PLUS )? NUMBER -> NUMBER | MINUS NUMBER -> ^( NUMBER[\"-1\"] TIMES NUMBER ) | ( PLUS )? unary -> unary | MINUS unary -> ^( T_EXPR NUMBER[\"-1\"] TIMES unary ) | TRUE -> TRUE | NOT TRUE -> ^( T_NOT TRUE ) | FALSE -> FALSE | NOT FALSE -> ^( T_NOT FALSE ) | NOT unary -> ^( T_NOT unary ) );
    public final SimpleLangParser.operand_return operand() throws RecognitionException {
        SimpleLangParser.operand_return retval = new SimpleLangParser.operand_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PLUS14=null;
        Token NUMBER15=null;
        Token MINUS16=null;
        Token NUMBER17=null;
        Token PLUS18=null;
        Token MINUS20=null;
        Token TRUE22=null;
        Token NOT23=null;
        Token TRUE24=null;
        Token FALSE25=null;
        Token NOT26=null;
        Token FALSE27=null;
        Token NOT28=null;
        SimpleLangParser.unary_return unary19 =null;

        SimpleLangParser.unary_return unary21 =null;

        SimpleLangParser.unary_return unary29 =null;


        Object PLUS14_tree=null;
        Object NUMBER15_tree=null;
        Object MINUS16_tree=null;
        Object NUMBER17_tree=null;
        Object PLUS18_tree=null;
        Object MINUS20_tree=null;
        Object TRUE22_tree=null;
        Object NOT23_tree=null;
        Object TRUE24_tree=null;
        Object FALSE25_tree=null;
        Object NOT26_tree=null;
        Object FALSE27_tree=null;
        Object NOT28_tree=null;
        RewriteRuleTokenStream stream_PLUS=new RewriteRuleTokenStream(adaptor,"token PLUS");
        RewriteRuleTokenStream stream_NOT=new RewriteRuleTokenStream(adaptor,"token NOT");
        RewriteRuleTokenStream stream_MINUS=new RewriteRuleTokenStream(adaptor,"token MINUS");
        RewriteRuleTokenStream stream_FALSE=new RewriteRuleTokenStream(adaptor,"token FALSE");
        RewriteRuleTokenStream stream_TRUE=new RewriteRuleTokenStream(adaptor,"token TRUE");
        RewriteRuleTokenStream stream_NUMBER=new RewriteRuleTokenStream(adaptor,"token NUMBER");
        RewriteRuleSubtreeStream stream_unary=new RewriteRuleSubtreeStream(adaptor,"rule unary");
        try {
            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:102:3: ( ( PLUS )? NUMBER -> NUMBER | MINUS NUMBER -> ^( NUMBER[\"-1\"] TIMES NUMBER ) | ( PLUS )? unary -> unary | MINUS unary -> ^( T_EXPR NUMBER[\"-1\"] TIMES unary ) | TRUE -> TRUE | NOT TRUE -> ^( T_NOT TRUE ) | FALSE -> FALSE | NOT FALSE -> ^( T_NOT FALSE ) | NOT unary -> ^( T_NOT unary ) )
            int alt6=9;
            switch ( input.LA(1) ) {
            case PLUS:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==NUMBER) ) {
                    alt6=1;
                }
                else if ( ((LA6_1 >= ID && LA6_1 <= LPAREN)) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
                }
                break;
            case NUMBER:
                {
                alt6=1;
                }
                break;
            case MINUS:
                {
                int LA6_3 = input.LA(2);

                if ( (LA6_3==NUMBER) ) {
                    alt6=2;
                }
                else if ( ((LA6_3 >= ID && LA6_3 <= LPAREN)) ) {
                    alt6=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 3, input);

                    throw nvae;

                }
                }
                break;
            case ID:
            case LPAREN:
                {
                alt6=3;
                }
                break;
            case TRUE:
                {
                alt6=5;
                }
                break;
            case NOT:
                {
                switch ( input.LA(2) ) {
                case TRUE:
                    {
                    alt6=6;
                    }
                    break;
                case FALSE:
                    {
                    alt6=8;
                    }
                    break;
                case ID:
                case LPAREN:
                    {
                    alt6=9;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 6, input);

                    throw nvae;

                }

                }
                break;
            case FALSE:
                {
                alt6=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:102:5: ( PLUS )? NUMBER
                    {
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:102:5: ( PLUS )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==PLUS) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:102:5: PLUS
                            {
                            PLUS14=(Token)match(input,PLUS,FOLLOW_PLUS_in_operand471);  
                            stream_PLUS.add(PLUS14);


                            }
                            break;

                    }


                    NUMBER15=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_operand474);  
                    stream_NUMBER.add(NUMBER15);


                    // AST REWRITE
                    // elements: NUMBER
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 102:19: -> NUMBER
                    {
                        adaptor.addChild(root_0, 
                        stream_NUMBER.nextNode()
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:103:5: MINUS NUMBER
                    {
                    MINUS16=(Token)match(input,MINUS,FOLLOW_MINUS_in_operand486);  
                    stream_MINUS.add(MINUS16);


                    NUMBER17=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_operand488);  
                    stream_NUMBER.add(NUMBER17);


                    // AST REWRITE
                    // elements: NUMBER, NUMBER
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 103:19: -> ^( NUMBER[\"-1\"] TIMES NUMBER )
                    {
                        // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:103:23: ^( NUMBER[\"-1\"] TIMES NUMBER )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(NUMBER, "-1")
                        , root_1);

                        adaptor.addChild(root_1, 
                        (Object)adaptor.create(TIMES, "TIMES")
                        );

                        adaptor.addChild(root_1, 
                        stream_NUMBER.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:104:5: ( PLUS )? unary
                    {
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:104:5: ( PLUS )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==PLUS) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:104:5: PLUS
                            {
                            PLUS18=(Token)match(input,PLUS,FOLLOW_PLUS_in_operand507);  
                            stream_PLUS.add(PLUS18);


                            }
                            break;

                    }


                    pushFollow(FOLLOW_unary_in_operand510);
                    unary19=unary();

                    state._fsp--;

                    stream_unary.add(unary19.getTree());

                    // AST REWRITE
                    // elements: unary
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 104:19: -> unary
                    {
                        adaptor.addChild(root_0, stream_unary.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 4 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:105:5: MINUS unary
                    {
                    MINUS20=(Token)match(input,MINUS,FOLLOW_MINUS_in_operand523);  
                    stream_MINUS.add(MINUS20);


                    pushFollow(FOLLOW_unary_in_operand525);
                    unary21=unary();

                    state._fsp--;

                    stream_unary.add(unary21.getTree());

                    // AST REWRITE
                    // elements: unary
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 105:19: -> ^( T_EXPR NUMBER[\"-1\"] TIMES unary )
                    {
                        // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:105:23: ^( T_EXPR NUMBER[\"-1\"] TIMES unary )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(T_EXPR, "T_EXPR")
                        , root_1);

                        adaptor.addChild(root_1, 
                        (Object)adaptor.create(NUMBER, "-1")
                        );

                        adaptor.addChild(root_1, 
                        (Object)adaptor.create(TIMES, "TIMES")
                        );

                        adaptor.addChild(root_1, stream_unary.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 5 :
                    // /home/lajnold/workspace/SimpleLang/src/main/antlr/SimpleLang.g:106:5: TRUE
                    {
                    TRUE22=(Token)match(input,TRUE,FOLLOW_TRUE_in_operand547);  
                    stream_TRUE.add(TRUE22);


                    // AST REWRITE
                    // elements: TRUE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
